@@ -1293,5 +1293,5 @@ exif_data_set_data_type (ExifData *d, ExifDataType dt)
 ExifDataType
 exif_data_get_data_type (ExifData *d)
 {
-	return (d && d->priv) ? d->priv->data_type : EXIF_DATA_TYPE_COUNT;
+	return (d && d->priv) ? d->priv->data_type : EXIF_DATA_TYPE_UNKNOWN;
 }
