@@ -1,3 +1,9 @@
+2009-09-29  Dan Fandrich <dan@coneharvesters.com>
+
+	* Added EXIF_DATA_TYPE_UNKNOWN as a backwards-compatible
+	  replacement for most uses of EXIF_DATA_TYPE_COUNT since that's
+	  a clearer name for how it's being used.
+
 2009-09-26  Dan Fandrich <dan@coneharvesters.com>
 
 	* libexif/exif-data.c: Added more error log messages and improved
